--- a/quarto/integrals/arc_length.qmd
+++ b/quarto/integrals/arc_length.qmd
@@ -493,14 +493,14 @@ What looks at first glance to be just a slightly more complicated equation is th
 
 $$
 \begin{align*}
-s(u) &= \int_0^u \sqrt{(-\sin(t))^2 + b\cos(t)^2} dt\\
-     &= \int_0^u \sqrt{\sin(t)^2 + \cos(t)^2 + c\cos(t)^2} dt  \\
-	 &=\int_0^u \sqrt{1 + c\cos(t)^2} dt.
+s(u) &= \int_0^u \sqrt{(-\sin(t))^2 + (b\cos(t))^2} dt\\
+     &= \int_0^u \sqrt{\sin(t)^2 + \cos(t)^2 + C\cos(t)^2} dt  \\
+	 &=\int_0^u \sqrt{1 + C\cos(t)^2} dt.
 \end{align*}
 $$
 
 
-But, despite it not looking too daunting, this integral is not tractable through our techniques and has an answer involving elliptic integrals. We can work numerically though. Letting $a=1$ and $b=2$, we have the arc length is given by:
+Where $C = 2c + c^2$ is a constant. But, despite it not looking too daunting, this integral is not tractable through our techniques and has an answer involving elliptic integrals. We can work numerically though. Letting $a=1$ and $b=2$, we have the arc length is given by:
 
 
 ```{julia}
@@ -710,7 +710,7 @@ For the latter claim, integrating in the $y$ variable gives
 $$
 \begin{align*}
 \int_u^c (f(x)-h) dx &= \int_h^m (c - f_1^{-1}(y)) dy\\
-&> \int_h^m (c - f_2^{-1}(y)) dy\\
+&> \int_h^m (f_2^{-1}(y) - c) dy\\
 &= \int_c^v (f(x)-h) dx
 \end{align*}
 $$
