--- a/quarto/integrals/center_of_mass.qmd
+++ b/quarto/integrals/center_of_mass.qmd
@@ -503,7 +503,7 @@ numericq(val)
 ###### Question
 
 
-Find the center of mass of the region in the first quadrant bounded by the function $f(x) = x^3(1-x)^4$.
+Find the center of mass in the $x$ variable of the region in the first quadrant bounded by the function $f(x) = x^3(1-x)^4$.
 
 
 ```{julia}
