--- a/quarto/integrals/improper_integrals.qmd
+++ b/quarto/integrals/improper_integrals.qmd
@@ -161,7 +161,7 @@ $$
 = \int_{\log(e)}^{\log(M)} \frac{1}{u^{2}} du
 = \frac{-1}{u} \big|_{1}^{\log(M)}
 = \frac{-1}{\log(M)} - \frac{-1}{1}
-= 1 - \frac{1}{M}.
+= 1 - \frac{1}{\log(M)}.
 $$
 
 As $M$ goes to $\infty$, this will converge to $1$.
