--- a/quarto/integrals/partial_fractions.qmd
+++ b/quarto/integrals/partial_fractions.qmd
@@ -456,7 +456,7 @@ answ = 2
 radioq(choices, answ, keep_order=true)
 ```
 
-If $m < n$, then why can we cancel out the $(x-c)^n$ and not have a concern?
+If $m < n$, then why can we cancel out the $(x-c)^m$ and not have a concern?
 
 
 ```{julia}
