--- a/quarto/alternatives/SciML.qmd
+++ b/quarto/alternatives/SciML.qmd
@@ -250,7 +250,7 @@ With the system defined, we can pass this to `NonlinearProblem`, as was done wit
 
 
 ```{julia}
-prob = NonlinearProblem(ns, [1.0], [α => 1.0])
+prob = NonlinearProblem(mtkcompile(ns), [1.0], Dict(α => 1.0))
 ```
 
 The problem is solved as before:
