--- a/quarto/alternatives/symbolics.qmd
+++ b/quarto/alternatives/symbolics.qmd
@@ -601,14 +601,7 @@ det(N)
 det(collect(N))
 ```
 
-Similarly, with `norm`:
-
-
-```{julia}
-norm(v)
-```
-
-and
+Similarly, with `norm`, which returns a generator unless collected:
 
 
 ```{julia}
